--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "",
   "main": "lib/index.js",
+  "bin": {
+    "repo-scrape": "bin/cli.js"
+  },
   "scripts": {
     "clean": "rm -rf coverage/ tmp/",
     "lint": "standard --fix",
