--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "image-size": "^0.6.2",
     "json-stable-stringify": "^1.0.1",
     "lodash": "^4.17.5",
+    "loglevel": "^1.6.1",
     "lowdb": "^1.0.0",
     "request": "^2.85.0",
     "request-promise-native": "^1.0.5",
